// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Error Screen tests should render the error screen 1`] = `
"<div>
  <h2>Error 400</h2>
  <p>Error</p>
  <img src=\\"../../../assets/error.svg\\" alt=\\"X\\">
  </div>"
`;

exports[`Error Screen tests should render the error screen 2`] = `
"<div>
  <h2>Error 404</h2>
  <p>No Pokémon found</p>
  <img src=\\"../../../assets/error.svg\\" alt=\\"X\\">
  </div>"
`;

exports[`Error Screen tests should render the error screen 3`] = `
"<div>
  <h2>Error 500</h2>
  <p>Server Error</p>
  <img src=\\"../../../assets/error.svg\\" alt=\\"X\\">
  </div>"
`;

exports[`Error Screen tests should render the error screen 4`] = `
"<div>
  <h2>Error 501</h2>
  <p>Error</p>
  <img src=\\"../../../assets/error.svg\\" alt=\\"X\\">
  </div>"
`;
